--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "dependencies": {
     "axios": "^1.7.2",
     "cors": "^2.8.5",
+    "dompurify": "^3.1.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.1",
     "nodemon": "^3.1.2",
+    "pdfkit": "^0.15.0",
     "postcss": "^8.4.38",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
